Fix simulation rules and validation workflow